# random

./: .drone.yml  .gitignore  .travis.yml  .travis.yml.patch  CHANGELOG.md  CHANGELOG.txt  DEVLOG.md  LICENSE  README.md  TODO  cabal.project  random.cabal  readme.md  stack-coveralls.yaml  stack-custom.yaml  stack-nightly.yaml  stack-old.yaml  stack-oldish.yaml  stack-really-old.yaml  stack.lts-18.yaml  stack.yaml  tfgh
.github/workflows/: ci.yaml  doctest.yml  stack.yaml
Benchmark/: BinSearch.hs  Makefile  SimpleRNGBench.hs
System/: Random.hs
System/Random/: Internal.hs  Monad.hs
bench/: Main.hs
bench-legacy/: BinSearch.hs  SimpleRNGBench.hs
cbits/: CastFloatWord.cmm
cmmbits/: floatsAndBits.cmm
scripts/: bench.sh  compare.py  doctest.sh
src/Data/Array/: Byte.hs
src/Data/Distribution/: FloatingInterval.hs  Integers.hs  Interval  Normal.hs  Permutation.hs
src/Data/Random/: Utils.hs
src/System/: Random.hs
src/System/Random/: Array.hs  GFinite.hs  GFiniteRange.hs  Internal.hs  Monad.hs  Seed.hs  Stateful.hs
src/System/Random/PCG/: Internal.hs
src/System/Random/PCG32/: Internal.hs
src/System/Random/SplitMix/: Internal.hs
src/System/Random/SplitMix/Internal/: Splitting.hs
test/: Spec.hs  doctests.hs
test-inspection/: Spec.hs
test-inspection/Spec/: Inspection.hs
test-legacy/: Legacy.hs  Random1283.hs  RangeTest.hs  T7936.hs  TestRandomIOs.hs  TestRandomRs.hs
test/Spec/: Inspection.hs  Range.hs  Run.hs  Seed.hs  Stateful.hs
testCast/: WordFloat.hs
tests/: Legacy.hs  Spec.hs  TestRandomRs.hs  all.T  doctests.hs  random1283.hs  rangeTest.hs  rangeTest.stdout
tests/Legacy/: Random1283.hs  RangeTest.hs  T7936.hs  TestRandomIOs.hs  TestRandomRs.hs
tests/Spec/: Bitmask.hs  Range.hs  Run.hs
