cabal-version:      >=1.10
name:               random
version:            1.2
license:            BSD3
license-file:       LICENSE
maintainer:         core-libraries-committee@haskell.org
bug-reports:        https://github.com/haskell/random/issues
synopsis:           random number library
description:
    This package provides a basic random number generation
    library, including the ability to split random number
    generators.

category:           System
build-type:         Custom
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: http://git.haskell.org/packages/random.git

custom-setup
    setup-depends:
        base -any,
        Cabal -any,
        cabal-doctest >=1.0.6

library
    exposed-modules:  System.Random
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.10 && <5,
        bytestring -any,
        mtl -any,
        splitmix -any
    c-sources: cbits/CastFloatWord.cmm

test-suite legacy
    type:             exitcode-stdio-1.0
    main-is:          Legacy.hs
    hs-source-dirs:   tests
    other-modules:
        Legacy.T7936
        Legacy.TestRandomIOs
        Legacy.TestRandomRs
        Legacy.Random1283
        Legacy.RangeTest

    default-language: Haskell2010
    ghc-options:      -with-rtsopts=-M4M
    build-depends:
        base -any,
        containers -any,
        random -any

test-suite doctests
    type:             exitcode-stdio-1.0
    main-is:          doctests.hs
    hs-source-dirs:   tests
    default-language: Haskell2010
    build-depends:
        base -any,
        doctest >=0.15,
        mwc-random -any,
        random -any,
        unliftio -any

test-suite spec
    type:           exitcode-stdio-1.0
    main-is:        Spec.hs
    hs-source-dirs: tests
    other-modules:
        Spec.Range
        Spec.Run

    ghc-options:    -Wall
    build-depends:
        base -any,
        random -any,
        smallcheck -any,
        tasty -any,
        tasty-smallcheck -any,
        tasty-expected-failure -any

benchmark legacy-bench
    type:             exitcode-stdio-1.0
    main-is:          SimpleRNGBench.hs
    hs-source-dirs:   bench-legacy
    other-modules:    BinSearch
    default-language: Haskell2010
    ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base -any,
        random -any,
        rdtsc -any,
        split -any,
        time -any
