cabal-version:      >=1.10
name:               random
version:            1.2
license:            BSD3
license-file:       LICENSE
maintainer:         core-libraries-committee@haskell.org
bug-reports:        https://github.com/haskell/random/issues
synopsis:           random number library
description:
    This package provides a basic random number generation
    library, including the ability to split random number
    generators.

category:           System
build-type:         Custom
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: http://git.haskell.org/packages/random.git

custom-setup
    setup-depends:
        base >=4.10 && <5,
        Cabal >=1.10 && <3.3,
        cabal-doctest >=1.0.6 && <1.1

library
    exposed-modules:  System.Random
    c-sources:        cbits/CastFloatWord.cmm
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.10 && <5,
        bytestring >=0.10 && <0.11,
        mtl >=2.2 && <2.3,
        splitmix >=0.0.3 && <0.1

test-suite legacy
    type:             exitcode-stdio-1.0
    main-is:          Legacy.hs
    hs-source-dirs:   tests
    other-modules:
        Legacy.T7936
        Legacy.TestRandomIOs
        Legacy.TestRandomRs
        Legacy.Random1283
        Legacy.RangeTest

    default-language: Haskell2010
    ghc-options:      -with-rtsopts=-M4M
    build-depends:
        base >=4.10 && <5,
        containers >=0.5 && <0.7,
        random -any

test-suite doctests
    type:             exitcode-stdio-1.0
    main-is:          doctests.hs
    hs-source-dirs:   tests
    default-language: Haskell2010
    build-depends:
        base >=4.10 && <5,
        doctest >=0.15 && <0.17,
        mwc-random >=0.13 && <0.15,
        primitive >=0.6 && <0.8,
        random -any,
        unliftio >=0.2 && <0.3

test-suite spec
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   tests
    other-modules:
        Spec.Range
        Spec.Run

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.10 && <5,
        random -any,
        smallcheck >=1.1 && <1.2,
        tasty >=1.0 && <1.3,
        tasty-smallcheck >=0.8 && <0.9,
        tasty-expected-failure >=0.11 && <0.12

benchmark legacy-bench
    type:             exitcode-stdio-1.0
    main-is:          SimpleRNGBench.hs
    hs-source-dirs:   bench-legacy
    other-modules:    BinSearch
    default-language: Haskell2010
    ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.10 && <5,
        random -any,
        rdtsc -any,
        split >=0.2 && <0.3,
        time >=1.8 && <1.11
